# HydraPop

./: .gitignore  CLAUDE.md  README.md  build.gradle  pyproject.toml  settings.gradle
notebooks/: validation.ipynb
src/gen-main/json/: missing_required_edge_property.json  missing_required_property.json  modern_graph.json  property_value_type_mismatch.json  schema.json  unexpected_edge_label.json  unexpected_property_key.json  unexpected_vertex_label.json  unknown_edge_endpoint.json  wrong_id_type.json  wrong_in_vertex_label.json  wrong_out_vertex_label.json
src/main/java/net/fortytwo/hydra/hydrapop/: ExampleGraphs.java  GenerateExampleData.java  HydraGremlinBridge.java  Validate.java
src/main/python/hydrapop/: decode.py  encode.py  gremlin_bridge.py  validate.py
src/main/python/hydrapop/dsl/: pg.py
src/test/java/net/fortytwo/hydra/hydrapop/: ExampleGraphs.java  HydraGremlinBridgeTest.java  TinkerGraphValidationTest.java
src/test/python/: conftest.py
src/test/python/hydrapop/: test_encode.py  test_gremlin_bridge_roundtrip.py  test_smoke.py  test_validation.py
