[project]
name = "hydrapop"
version = "0.1.0"
description = "Translingual extensions for Apache TinkerPop, powered by Hydra"
readme = "README.md"
authors = []
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = []

[dependency-groups]
test = ["pytest>=8.3.4"]
lint = ["ruff>=0.8.4"]
check = ["pyright>=1.1.391"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/meso-forge", "conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64"]

[tool.pixi.dependencies]
hydra-python = ">=0.13.0"

[tool.pixi.pypi-dependencies]
hydrapop = { path = ".", editable = true }

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.lint.tasks]
lint = "ruff check"
format = "ruff format"

[tool.pixi.feature.check.tasks]
check = "pyright"

[tool.pixi.environments]
default = { features = ["test", "lint", "check"] }

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["RUF", "D", "N", "UP", "PD"]
ignore = ["N818"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "T", "T_*", "V", "V_*",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"{src/test/python,docs,scripts,examples}/*" = ["D", "E402", "N"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
    "src/main/python",
    "../hydra/hydra-ext/src/gen-main/python",
]

[tool.pytest.ini_options]
pythonpath = [
    "src/main/python",
    "src/test/python",
    "../hydra/hydra-ext/src/gen-main/python",
]
testpaths = [
    "src/test/python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/main/python/hydrapop",
]
