[project]
name = "hydrapop"
version = "0.1.0"
description = "Translingual extensions for Apache TinkerPop, powered by Hydra"
readme = "README.md"
authors = []
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "gremlinpython>=3.8.0",
    "hydra-kernel>=0.16.1",
    "hydra-pg>=0.16.1",
]

[project.optional-dependencies]
test = ["pytest>=8.3.4"]
lint = ["ruff>=0.8.4"]
check = ["pyright>=1.1.391"]
notebook = ["ipykernel>=6.29", "nest-asyncio>=1.6"]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pyright>=1.1.391",
    "ipykernel>=6.29",
    "nest-asyncio>=1.6",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["RUF", "D", "N", "UP", "PD"]
ignore = ["N818"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "T", "T_*", "V", "V_*",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"{src/test/python,docs,scripts,examples}/*" = ["D", "E402", "N"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
    "src/main/python",
]

[tool.pytest.ini_options]
pythonpath = [
    "src/main/python",
    "src/test/python",
]
testpaths = [
    "src/test/python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/main/python/hydrapop",
]
